--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,8 +8,28 @@
             "script": "new_asset.js"
         },
         {
+            "name": "New Vector Asset",
+            "identifier": "new_vector_asset",
+            "script": "new_asset.js"
+        },
+        {
+            "name": "New Nine-Patch Asset",
+            "identifier": "new_nine_patch_asset",
+            "script": "new_nine_patch_asset.js"
+        },
+        {
+            "name": "New App Icon",
+            "identifier": "new_app_icon",
+            "script": "new_app_icon.js"
+        },
+        {
+            "name": "Color XML From Selected Layers",
+            "identifier": "view_color_code_from_selected_layers",
+            "script": "view_color_code.js"
+        },
+        {
             "name": "view_vector_drawable_code",
-            "identifier": "android_resources_export.view_vector_drawable_code",
+            "identifier": "view_vector_drawable_code",
             "script": "view_vector_drawable_code.js",
             "handlers": {
                 "run": "onRun",
@@ -24,8 +44,12 @@
         "title": "vector_drawable",
         "items": [
             "new_bitmap_asset",
+            "new_vector_asset",
+            "new_nine_patch_asset",
+            "new_app_icon",
             "-",
-            "android_resources_export.view_vector_drawable_code"
+            "view_color_code_from_selected_layers",
+            "view_vector_drawable_code"
         ]
     }
 }
