WIP, vector drawable, real time view code

--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
         "sketch-module-web-view": "^3.5.1",
         "svg2vectordrawable": "^2.7.1"
     },
-    "author": "Ashung Hung <ashung.hung@gmail.com>"
+    "author": "Ashung Hung <ashung.hung@foxmail.com>"
 }
