Fixed language bug.

--- a/assets/manifest_en.json
+++ b/assets/manifest_en.json
@@ -115,6 +115,14 @@
             "name": "Buy Me a Coffee",
             "identifier": "buymeacoffee",
             "script": "help.js"
+        },
+        {
+            "handlers": {
+                "actions": {
+                    "OpenDocument": "onOpenDocument"
+                }
+            },
+            "script": "languages.js"
         }
     ],
     "menu": {
